--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
     "typecheck": "tsc && tsc -p cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
-    "migrate": "prisma migrate dev && prisma db seed",
+    "migrate": "prisma migrate dev",
+    "migseed": "prisma migrate dev && prisma db seed",
     "seed": "prisma db seed"
   },
   "prettier": {},
@@ -28,6 +29,13 @@
   ],
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/css-bundle": "^2.2.0",
     "@remix-run/node": "^2.2.0",
@@ -36,6 +44,8 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^3.0.5",
     "isbot": "^3.7.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
